perf: parallelize static data loads across skill definitions, spawns, NPC drops, and AI files
Switch static data loads for skills, NPC spawns, drops, and AI to concurrent processing on a dedicated thread pool. Maintains deterministic output while avoiding commonPool contention and deadlock risks in nested parent tasks